apicarto/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicarto
  name: apicarto
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8091
  selector:
    app: apicarto
