apicarto/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicarto
spec:
  rules:
  - host: apicarto.test.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apicarto
            port:
              number: 80
